--- a/Floors/FloorsByLevels/src/FloorsByLevels.csproj
+++ b/Floors/FloorsByLevels/src/FloorsByLevels.csproj
@@ -5,15 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dependencies\FloorsByLevelsDependencies.csproj" />
-    <ProjectReference Include="..\..\..\..\Elements\Elements\src\Elements.csproj" />
-    <ProjectReference Include="..\..\..\..\Hypar\Hypar.Functions\src\Hypar.Functions.csproj" />
+    <ProjectReference Include="..\dependencies\FloorsByLevels.Dependencies.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Textures\*.*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>  
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Hypar.Elements" Version="0.8.4" />
+    <PackageReference Include="Hypar.Functions" Version="0.8.8" />
   </ItemGroup>
 
 </Project>
