--- a/Floors/CreateFakeLevelPerimeters/src/CreateFakeLevelPerimeters.csproj
+++ b/Floors/CreateFakeLevelPerimeters/src/CreateFakeLevelPerimeters.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\dependencies\FloorsByLevelsRedux.Dependencies.csproj" />
+    <ProjectReference Include="..\dependencies\CreateFakeLevelPerimeters.Dependencies.csproj" />
   </ItemGroup>
 
   <ItemGroup>
