--- a/Floors/CreateFakeLevelPerimeters/test/CreateFakeLevelPerimeters.Tests.csproj
+++ b/Floors/CreateFakeLevelPerimeters/test/CreateFakeLevelPerimeters.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\FloorsByLevelsRedux.csproj" />
+    <ProjectReference Include="..\src\CreateFakeLevelPerimeters.csproj" />
   </ItemGroup>
 
 </Project>
